# Nebulae

./: .gitignore  LICENSE  README.md  build.py  gui.py  main.py  requirements.txt  smoke_test.py
core/: app.py  crypto_manager.py  database.py  network.py
p2p_crypto/: Cargo.toml
p2p_crypto/src/: lib.rs
tests/: test_professional_logic.py
